--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -4,7 +4,7 @@
     android:gravity="center">
 
     <TextView
-		android:id="@+id/content"
+		android:id="@+id/main_content"
         android:text="@string/hello_world"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
