--- a/app/src/main/res/layout/status_appwidget.xml
+++ b/app/src/main/res/layout/status_appwidget.xml
@@ -7,7 +7,9 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:background="@drawable/mabisign" 
-		android:gravity="center_horizontal" >
+		android:gravity="center_horizontal" 
+		android:clickable="true"
+		android:onClick="showMain" >
 			<TextView
 				android:id="@+id/status_patch"
 				android:text="\?"
