--- a/app/src/main/res/layout/status_appwidget.xml
+++ b/app/src/main/res/layout/status_appwidget.xml
@@ -6,28 +6,28 @@
 	<RelativeLayout
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:background="@drawable/mabisign" 
 		android:gravity="center_horizontal" 
 		android:id="@+id/widget_content"
 		android:clickable="true" >
+			<ImageView
+				android:id="@+id/logo"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:src="@drawable/mabisign" />
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_below="@+id/logo" 
+				android:gravity="center_horizontal" >
 			<TextView
-				android:id="@+id/status_patch"
-				android:text="\?"
+				android:id="@+id/status_login"
+				android:text="@string/status_offline"
 				android:textColor="#FFFFFF"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:shadowColor="#000000"
 				android:shadowRadius="4"
 				android:shadowDy="2" />
-			<TextView
-				android:id="@+id/status_launcher"
-				android:text="\?"
-				android:textColor="#FFFFFF"
-        		android:layout_width="wrap_content"
-        		android:layout_height="wrap_content" 
-				android:layout_below="@+id/status_patch"
-				android:shadowColor="#000000"
-				android:shadowRadius="4"
-				android:shadowDy="2" />
+			</LinearLayout>
 	</RelativeLayout>
 </LinearLayout>
