--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,12 +1,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center">
+	android:gravity="top" >
+	<ImageButton
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:src="@drawable/mabisign"
+		android:onClick="updateWidget"/>
+	
+	<LinearLayout
+		android:layout_height="wrap_content"
+		android:layout_width="match_parent"
+    	android:gravity="center">
 
-    <TextView
-		android:id="@+id/message"
-        android:text="@string/hello_world"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
+    	<TextView
+			android:id="@+id/message"
+        	android:text="@string/hello_world"
+        	android:layout_width="wrap_content"
+        	android:layout_height="wrap_content" />
+	</LinearLayout>
 </LinearLayout>
