--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -3,15 +3,72 @@
     android:layout_height="match_parent"
 	android:gravity="top" >
 	
-	<LinearLayout
-		android:layout_height="wrap_content"
+	<RelativeLayout
 		android:layout_width="match_parent"
-    	android:gravity="center">
-
-    	<TextView
-			android:id="@+id/message"
-        	android:text="@string/hello_world"
-        	android:layout_width="wrap_content"
-        	android:layout_height="wrap_content" />
-	</LinearLayout>
+		android:layout_height="wrap_content"
+		android:gravity="left" >
+		<LinearLayout
+			android:id="@+id/box_message"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content" 
+			android:gravity="center_horizontal">
+			<TextView
+				android:id="@+id/message"
+        		android:text="@string/hello_world"
+        		android:layout_width="wrap_content"
+        		android:layout_height="wrap_content" />
+		</LinearLayout>
+		<TextView
+			android:layout_below="@+id/box_message"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:background="@drawable/menu"
+			android:id="@+id/daily_today_tara"
+			android:text="Tara Today"/>
+		<TextView
+			android:layout_below="@+id/daily_today_tara"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:id="@+id/daily_today_tara_content"
+			android:visibility="gone"/>
+		<TextView
+			android:layout_below="@+id/daily_today_tara_content"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:background="@drawable/menu"
+			android:id="@+id/daily_today_tail"
+			android:text="Tail Today"/>
+		<TextView
+			android:layout_below="@+id/daily_today_tail"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:id="@+id/daily_today_tail_content"
+			android:visibility="gone"/>
+		<TextView
+			android:layout_below="@+id/daily_today_tail_content"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:background="@drawable/menu"
+			android:id="@+id/daily_tomorrow_tara"
+			android:text="Tara Tomorrow"/>
+		<TextView
+			android:layout_below="@+id/daily_tomorrow_tara"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:id="@+id/daily_tomorrow_tara_content"
+			android:visibility="gone"/>
+		<TextView
+			android:layout_below="@+id/daily_tomorrow_tara_content"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:background="@drawable/menu"
+			android:id="@+id/daily_tomorrow_tail" 
+			android:text="Tail Tomorrow"/>
+		<TextView
+			android:layout_below="@+id/daily_tomorrow_tail"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:id="@+id/daily_tomorrow_tail_content"
+			android:visibility="gone"/>
+	</RelativeLayout>
 </LinearLayout>
