--- a/app/src/main/res/layout/status_appwidget.xml
+++ b/app/src/main/res/layout/status_appwidget.xml
@@ -1,5 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/layout"
+    android:id="@+id/widget_layout"
 	android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/widget_margin" >
@@ -11,23 +11,24 @@
 		android:clickable="true" >
 			<ImageView
 				android:id="@+id/logo"
-				android:layout_width="wrap_content"
+				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:src="@drawable/mabisign" />
+				android:src="@drawable/mabisign"
+				android:gravity="center_horizontal"/>
 			<LinearLayout
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:layout_below="@+id/logo" 
 				android:gravity="center_horizontal" >
-			<TextView
-				android:id="@+id/status_login"
-				android:text="@string/status_offline"
-				android:textColor="#FFFFFF"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:shadowColor="#000000"
-				android:shadowRadius="4"
-				android:shadowDy="2" />
+				<TextView
+					android:id="@+id/status_login"
+					android:text="@string/status_offline"
+					android:textColor="#FFFFFF"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:shadowColor="#000000"
+					android:shadowRadius="4"
+					android:shadowDy="2" />
 			</LinearLayout>
 	</RelativeLayout>
 </LinearLayout>
