Adding default text for main view + small text change.

--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -41,6 +41,7 @@
 			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
 			android:id="@+id/daily_today_tara_content"
+			android:text="@string/message_loading"
 			android:visibility="gone"/>
 		<TextView
 			android:layout_below="@+id/daily_today_tara_content"
@@ -54,6 +55,7 @@
 			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
 			android:id="@+id/daily_today_tail_content"
+			android:text="@string/message_loading"
 			android:visibility="gone"/>
 		<LinearLayout
 			android:layout_below="@+id/daily_today_tail_content"
@@ -78,6 +80,7 @@
 			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
 			android:id="@+id/daily_tomorrow_tara_content"
+			android:text="@+string/message_loading"
 			android:visibility="gone"/>
 		<TextView
 			android:layout_below="@+id/daily_tomorrow_tara_content"
@@ -91,6 +94,7 @@
 			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
 			android:id="@+id/daily_tomorrow_tail_content"
+			android:text="@string/message_loading"
 			android:visibility="gone"/>
 	</RelativeLayout>
 </LinearLayout>
