--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 	android:gravity="top" >
@@ -93,4 +93,4 @@
 			android:id="@+id/daily_tomorrow_tail_content"
 			android:visibility="gone"/>
 	</RelativeLayout>
-</LinearLayout>
+</ScrollView>
