--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -5,6 +5,8 @@
 		android:title="@string/refresh_widget"/>
 	<item android:id="@+id/menu_settings"
 		android:title="@string/settings"/>
+	<item android:id="@+id/menu_about"
+		android:title="@string/about" />
 	<item android:id="@+id/menu_debug"
 		android:title="@string/menu_debug" />
 </menu>
